<resources>
    <string name="app_name">CS4520 In Class</string>
    <string name="weight_label">lb</string>
    <string name="feet_label">feet</string>
    <string name="inches_label">inches</string>

    <string name="weight">Weight</string>
    <string name="height">Height</string>

    <string name="weight_hint">Your weight in pounds</string>
    <string name="feet_hint">feet</string>
    <string name="inches_hint">inches</string>
    <string name="click_promt">Click on Calculate BMI to get your BMI</string>
    <string name="button_text">Calculate BMI</string>
    <string name="app_title">Body Mass Index (BMI)</string>

    <string name="main_in_class_06">IN CLASS 06</string>
    <string name="ic06_findnews">Find News</string>


    <!-- IN CLASS 7 -->

    <string name="ic7_app_name">Notes</string>
    <string name="ic7_notes_title">All Notes</string>
    <string name="ic7_profile">My Profile</string>
    <string name="ic7_notes">My Notes</string>
    <string name="ic7_new_note">Add Note</string>
    <string name="ic7_delete_note">Delete</string>
    <string name="ic7_log_out">Log Out</string>


    <string name="ic7_log_in">Log In</string>
    <string name="ic7_email">Email</string>
    <string name="ic7_password">Password</string>
    <string name="ic7_register_prompt">Don\'t have an account? Register Here.</string>

    <string name="ic7_register">Register</string>
    <string name="ic7_reg_name">Name</string>
    <string name="ic7_login_prompt">Have an account? Login.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>