<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment" >

    <TextView
        android:id="@+id/ic7_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/ic7_reg_name"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ic7_profile_dispName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/ic7_profile_name"
        app:layout_constraintStart_toEndOf="@+id/ic7_profile_name"
        app:layout_constraintTop_toTopOf="@+id/ic7_profile_name" />

    <TextView
        android:id="@+id/ic7_profile_dispEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/ic7_profile_email"
        app:layout_constraintStart_toEndOf="@+id/ic7_profile_email"
        app:layout_constraintTop_toTopOf="@+id/ic7_profile_email" />

    <Button
        android:id="@+id/ic7_profile_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/ic7_log_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic7_profile_email" />

    <TextView
        android:id="@+id/ic7_profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ic7_email"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/ic7_profile_name"
        app:layout_constraintTop_toBottomOf="@+id/ic7_profile_name" />
</androidx.constraintlayout.widget.ConstraintLayout>