<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InClass07Activity">

    <TextView
        android:id="@+id/ic7_home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/ic7_notes_title"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ic7_home_go2profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/ic7_profile"
        app:layout_constraintBottom_toBottomOf="@+id/ic7_home_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ic7_home_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ic7_home_rv"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/ic7_home_go2profile"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ic7_home_title"
        app:layout_constraintTop_toBottomOf="@+id/ic7_home_title" />

    <Button
        android:id="@+id/ic7_home_addNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/ic7_new_note"
        app:layout_constraintBottom_toBottomOf="@+id/ic7_home_newNote"
        app:layout_constraintEnd_toEndOf="@+id/ic7_home_go2profile"
        app:layout_constraintTop_toTopOf="@+id/ic7_home_newNote"
        app:layout_constraintVertical_bias="0.666" />

    <EditText
        android:id="@+id/ic7_home_newNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Take note"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ic7_home_addNote"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ic7_home_title"
        app:layout_constraintTop_toBottomOf="@+id/ic7_home_rv"
        tools:ignore="SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>